fixed a bug where a thumbnail would overflow to the next list item

--- a/wp-content/themes/mojintranet/assets/css/src/widgets/dw_news/_list.scss
+++ b/wp-content/themes/mojintranet/assets/css/src/widgets/dw_news/_list.scss
@@ -4,6 +4,8 @@
   }
 
   .news-item {
+    @include clearfix;
+
     padding: 10px 0;
     border-top: 1px solid $grey-2;
 
